--- a/apple01.html
+++ b/apple01.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"> <!-- 전세계언어 -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"> <!--모바일전용-->
+    <meta name="author" content="hyojinlee">
+    <meta name="description" content="뮤직 모바일 메인에서 다양한 정보와 유용한 컨텐츠를 만나보세요"/>
+    <meta name="keywords" content="듣기, 2019년 최고의 음악 100선, Apple Music">
     <title>Document</title>
+
+    <!-- meta -->
+
+    <meta name="format-detection" content="telephone=no">
+    <meta property="og:title" content="뮤직 모바일 메인">
+    <meta property="og:url" content="https://github.com/webstoryboy/apple">
+    <meta property="og:image" content="https://github.com/webstoryboy/mobile/assets/icon/icon.jpg">
+    <meta perperty="og:description" content="뮤직 모바일 메인에서 다양한 정보와 유용한 컨텐츠를 만나보세요">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="뮤직 모바일 메인">
+    <meta name="url" content="https://github.com/webstoryboy/apple">
+    <meta name="image" content="https://github.com/webstoryboy/mobile/assets/icon/icon.jpg">
+    <meta name="description" content="뮤직 모바일 메인에서 다양한 정보와 유용한 컨텐츠를 만나보세요">
 </head>
 <body>
     
